--- a/Estudo de modelo preditivo de Epidemias/notebook/Modelo_preditivo_de_Epidemias.ipynb
+++ b/Estudo de modelo preditivo de Epidemias/notebook/Modelo_preditivo_de_Epidemias.ipynb
@@ -422,7 +422,7 @@
         "As equações que o regem passam a ser:\n",
         "\n",
         "$$\n",
-        "\\frac{dS}{dt} = \\frac{B S I}{N} - \\frac{dIm}{dt} + \\lambda R\n",
+        "\\frac{dS}{dt} = \\frac{-B S I}{N} - \\frac{dIm}{dt} + \\lambda R\n",
         "$$\n",
         "\n",
         "$$\n",
